Check Data plan or wifi